--- a/workstation-pf.conf
+++ b/workstation-pf.conf
@@ -6,29 +6,29 @@
 
 ## Set interfaces
 
-net_if = “em0”
+net_if = "em0"
 
 ## Set the ip address (not needed if using DHCP)
 
-# $net_if_ip=”192.168.1.104″
+# $net_if_ip="192.168.1.104″
 
 ## Define the non-routable reserved addresses RFC 1918
 
-nonr = “{127.0.0.0/8, 192.168.0.0/16, 172.16.0.0/12, \
+nonr = "{127.0.0.0/8, 192.168.0.0/16, 172.16.0.0/12, \
 
 10.0.0.0/8, 169.254.0.0/16, 192.0.2.0/24, \
 
-0.0.0.0/8, 240.0.0.0/4, 224.0.0.0/3}”
+0.0.0.0/8, 240.0.0.0/4, 224.0.0.0/3}"
 
 ## Set webservices
 
-web = “{http, https}”
+web = "{http, https}"
 
 ## Set other services
 
-int_tcp_services = “{domain, ssh, http, https, ntp, smtp, smtps}”
+int_tcp_services = "{domain, ssh, http, https, ntp, smtp, smtps}"
 
-int_udp_services = “{domain, ntp}”
+int_udp_services = "{domain, ntp}"
 
 ## Let free traffic on the loopback interface lo0
 
