--- a/webserver-ipfw.conf
+++ b/webserver-ipfw.conf
@@ -10,9 +10,9 @@ ipfw -q -f flush
 
 # Set rules command prefix
 
-cmd=”ipfw -q add”
+cmd="ipfw -q add"
 
-net=”em0″ # interface name of NIC attached to Internet
+net="em0" # interface name of NIC attached to Internet
 
 #################################################################
 
@@ -26,7 +26,7 @@ $cmd 00005 allow ip from any to any via lo0
 
 # Allow the packet through if it has previously been added to the
 
-# the “dynamic” rules table by an ‘allow keep-state’ statement.
+# the "dynamic" rules table by an 'allow keep-state' statement.
 
 #################################################################
 
@@ -146,7 +146,7 @@ $cmd 00353 deny tcp from any to any 81 in via $net
 
 # Ideally you should declare what ip or groups of ips can access
 
-# instead of setting ‘any’
+# instead of setting 'any'
 
 $cmd 00400 allow tcp from any to me 22 in via $net setup keep-state
 
