--- a/workstation-ipfw.conf
+++ b/workstation-ipfw.conf
@@ -8,9 +8,9 @@ ipfw -q -f flush
 
 # Set rules command prefix
 
-cmd=”ipfw -q add”
+cmd="ipfw -q add"
 
-net=”em0″ # interface name of NIC attached to Internet
+net="em0" # interface name of NIC attached to Internet
 
 #################################################################
 
@@ -24,7 +24,7 @@ $cmd 00005 allow ip from any to any via lo0
 
 # Allow the packet through if it has previously been added to the
 
-# the “dynamic” rules table by an ‘allow keep-state’ statement.
+# the "dynamic" rules table by an 'allow keep-state' statement.
 
 #################################################################
 
@@ -42,7 +42,7 @@ $cmd 00010 check-state :default
 
 #################################################################
 
-# Allow out access to my ISP’s Domain name server.
+# Allow out access to my ISP's Domain name server.
 
 # x.x.x.x must be the IP address of your ISP.s DNS
 
@@ -160,7 +160,7 @@ $cmd 00401 allow tcp from any to me 443 in via $net setup limit src-addr 2
 
 # Ideally you should declare what ip or groups of ips can access
 
-# instead of setting ‘any’
+# instead of setting 'any'
 
 $cmd 00450 allow tcp from any to me 22 in via $net setup keep-state
 
