--- a/workstation-pf.conf
+++ b/workstation-pf.conf
@@ -14,7 +14,7 @@ net_if = "em0"
 
 ## Define the non-routable reserved addresses RFC 1918
 
-nonr = "{127.0.0.0/8, 192.168.0.0/16, 172.16.0.0/12, \
+nonr = "{127.0.0.0/8, 172.16.0.0/12, \
 
 10.0.0.0/8, 169.254.0.0/16, 192.0.2.0/24, \
 
