--- a/webserver-ipfw.conf
+++ b/webserver-ipfw.conf
@@ -44,31 +44,17 @@ $cmd 00010 check-state :default
 
 #################################################################
 
-# Allow out non-secure standard www function
+# Allow out TCP
 
-$cmd 00030 allow tcp from me to any 80 out via $net setup keep-state
+$cmd 00030 allow tcp from me to any 49152–65535 out via $net setup keep-state
 
-# Allow out secure www function https over TLS SSL
+# Allow out UDP
 
-$cmd 00035 allow tcp from me to any 443 out via $net setup keep-state
-
-# Allow out send and get email function
-
-# Uncomment if you need to use these ports to send email say from WordPress
-
-# $cmd 00040 allow tcp from me to any 25 out via $net setup keep-state
-
-# $cmd 00041 allow tcp from me to any 110 out via $net setup keep-state
+$cmd 00035 allow udp from me to any 49152–65535 out via $net setup keep-state
 
 # Allow outbound ping
 
-$cmd 00050 allow icmp from any to any out via $net keep-state
-
-# Allow outbound SSH
-
-# Uncomment this rule if you need to access other servers from this one
-
-# $cmd 00060 allow tcp from any to any 22 out via $net setup keep-state
+$cmd 00050 allow icmp from me to any out via $net keep-state
 
 # Deny and log everything else that is trying to get out.
 
@@ -89,26 +75,22 @@ $cmd 00099 deny log all from any to any out via $net
 # Deny all inbound traffic from non-routable reserved address spaces
 
 $cmd 00300 deny all from 192.168.0.0/16 to any in via $net #RFC 1918 private IP
-
 $cmd 00301 deny all from 172.16.0.0/12 to any in via $net #RFC 1918 private IP
-
 $cmd 00302 deny all from 10.0.0.0/8 to any in via $net #RFC 1918 private IP
-
 $cmd 00303 deny all from 127.0.0.0/8 to any in via $net #loopback
-
 $cmd 00304 deny all from 0.0.0.0/8 to any in via $net #loopback
-
 $cmd 00305 deny all from 169.254.0.0/16 to any in via $net #DHCP auto-config
-
 $cmd 00306 deny all from 192.0.2.0/24 to any in via $net #reserved for docs
-
 $cmd 00307 deny all from 204.152.64.0/23 to any in via $net #Sun cluster interconnect
-
 $cmd 00308 deny all from 224.0.0.0/3 to any in via $net #Class D & E multicast
-
 $cmd 00309 deny all from any to ::1 in via $net
-
 $cmd 00310 deny all from ::1 to any in via $net
+$cmd 00311 deny all from fe80::/10 to any in via $net #IPv6 link-local addresses
+$cmd 00312 deny all from fc00::/7 to any in via $net #IPv6 unique local addresses
+$cmd 00313 deny all from 240.0.0.0/4 to any in via $net #IPv4 future use addresses
+$cmd 00314 deny all from ff00::/8 to any in via $net #IPv6 multicast addresses
+$cmd 00315 deny all from ::1 to any in via $net #IPv6 loopback
+$cmd 00316 deny all from any to ::1 in via $net #IPv6 loopback
 
 # Deny any late arriving packets
 
@@ -126,21 +108,23 @@ $cmd 00331 allow tcp from any to me 443 in via $net setup limit src-addr 2
 
 # Deny ident
 
-$cmd 00340 deny tcp from any to any 113 in via $pif
+$cmd 00340 deny tcp from any to any 113 in via $net
 
 # Deny all Netbios services. 137=name, 138=datagram, 139=session
 
 # Netbios is MS/Windows sharing services.
 
-# Block MS/Windows hosts2 name server requests 81
-
 $cmd 00350 deny tcp from any to any 137 in via $net
+$cmd 00351 deny udp from any to any 137 in via $net
+$cmd 00352 deny tcp from any to any 138 in via $net
+$cmd 00353 deny udp from any to any 138 in via $net
+$cmd 00354 deny tcp from any to any 139 in via $net
+$cmd 00355 deny udp from any to any 139 in via $net
 
-$cmd 00351 deny tcp from any to any 138 in via $net
+# Deny TorPark onion routing
 
-$cmd 00352 deny tcp from any to any 139 in via $net
-
-$cmd 00353 deny tcp from any to any 81 in via $net
+$cmd 00356 deny tcp from any to any 81 in via $net
+$cmd 00357 deny udp from any to any 81 in via $net
 
 # Allow inbound SSH
 
