--- a/workstation-ipfw.conf
+++ b/workstation-ipfw.conf
@@ -46,39 +46,28 @@ $cmd 00010 check-state :default
 
 # x.x.x.x must be the IP address of your ISP.s DNS
 
-# Dup these lines if your ISP has more than one DNS server
+# Dupplicate these lines if your ISP has more than one DNS server
 
 # Get the IP addresses from /etc/resolv.conf file
 
-$cmd 00020 allow tcp from any to 192.168.1.1 53 out via $net setup keep-state
+$cmd 00020 allow tcp from me to 192.168.1.1 53 out via $net setup keep-state
+$cmd 00025 allow udp from me to 192.168.1.1 53 out via $net keep-state
 
-$cmd 00025 allow udp from any to 192.168.1.1 53 out via $net keep-state
+# Allow outbound TCP
 
-# Allow out non-secure standard www function
+$cmd 00030 allow tcp from me to any 49152–65535 out via $net setup keep-state
 
-$cmd 00030 allow tcp from any to any 80 out via $net setup keep-state
+# Allow outbound UDP
 
-# Allow out secure www function https over TLS SSL
-
-$cmd 00035 allow tcp from any to any 443 out via $net setup keep-state
-
-# Allow out send and get email function
-
-$cmd 00040 allow tcp from any to any 25 out via $net setup keep-state
-
-$cmd 00041 allow tcp from any to any 110 out via $net setup keep-state
+$cmd 00035 allow udp from me to any 49152–65535 out via $net setup keep-state
 
 # Allow outbound ping
 
-$cmd 00050 allow icmp from any to any out via $net keep-state
+$cmd 00050 allow icmp from me to any out via $net keep-state
 
-# Allow outbound SSH
+# Allow outbound whois
 
-$cmd 00060 allow tcp from any to any 22 out via $net setup keep-state
-
-# Allow out whois
-
-$cmd 00090 allow tcp from any to any 43 out via $net setup keep-state
+$cmd 00090 allow tcp from me to any 43 out via $net setup keep-state
 
 # Deny and log everything else that is trying to get out.
 
@@ -96,29 +85,26 @@ $cmd 00099 deny log all from any to any out via $net
 
 #################################################################
 
-# Deny all inbound traffic from non-routable reserved address spaces
-
+# Deny all inbound traffic from non-routable reserved address spaces.
+# Adjust this rule block for your internal network topology.
+# Everything except the first rule is blocked by default.
 # $cmd 00300 deny all from 192.168.0.0/16 to any in via $net #RFC 1918 private IP
-
 $cmd 00301 deny all from 172.16.0.0/12 to any in via $net #RFC 1918 private IP
-
 $cmd 00302 deny all from 10.0.0.0/8 to any in via $net #RFC 1918 private IP
-
 $cmd 00303 deny all from 127.0.0.0/8 to any in via $net #loopback
-
 $cmd 00304 deny all from 0.0.0.0/8 to any in via $net #loopback
-
 $cmd 00305 deny all from 169.254.0.0/16 to any in via $net #DHCP auto-config
-
 $cmd 00306 deny all from 192.0.2.0/24 to any in via $net #reserved for docs
-
 $cmd 00307 deny all from 204.152.64.0/23 to any in via $net #Sun cluster interconnect
-
 $cmd 00308 deny all from 224.0.0.0/3 to any in via $net #Class D & E multicast
-
 $cmd 00309 deny all from any to ::1 in via $net
-
 $cmd 00310 deny all from ::1 to any in via $net
+$cmd 00311 deny all from fe80::/10 to any in via $net #IPv6 link-local addresses
+$cmd 00312 deny all from fc00::/7 to any in via $net #IPv6 unique local addresses
+$cmd 00313 deny all from 240.0.0.0/4 to any in via $net #IPv4 future use addresses
+$cmd 00314 deny all from ff00::/8 to any in via $net #IPv6 multicast addresses
+$cmd 00315 deny all from ::1 to any in via $net #IPv6 loopback
+$cmd 00316 deny all from any to ::1 in via $net #IPv6 loopback
 
 # Deny public pings
 
@@ -132,15 +118,17 @@ $cmd 00330 deny tcp from any to any 113 in via $pif
 
 # Netbios is MS/Windows sharing services.
 
-# Block MS/Windows hosts2 name server requests 81
+$cmd 00350 deny tcp from any to any 137 in via $net
+$cmd 00351 deny udp from any to any 137 in via $net
+$cmd 00352 deny tcp from any to any 138 in via $net
+$cmd 00353 deny udp from any to any 138 in via $net
+$cmd 00354 deny tcp from any to any 139 in via $net
+$cmd 00355 deny udp from any to any 139 in via $net
 
-$cmd 00340 deny tcp from any to any 137 in via $net
+# Deny TorPark onion routing
 
-$cmd 00341 deny tcp from any to any 138 in via $net
-
-$cmd 00342 deny tcp from any to any 139 in via $net
-
-$cmd 00343 deny tcp from any to any 81 in via $net
+$cmd 00356 deny tcp from any to any 81 in via $net
+$cmd 00357 deny udp from any to any 81 in via $net
 
 # Deny any late arriving packets
 
@@ -150,19 +138,19 @@ $cmd 00340 deny all from any to any frag in via $net
 
 $cmd 00345 deny tcp from any to any established in via $net
 
-# Allow in standard www function because I have apache server
+# Allow in standard www function in case you have a web server
+# Uncomment the following two lines to enable the rules and allow traffic.
 
-$cmd 00400 allow tcp from any to me 80 in via $net setup limit src-addr 2
-
-$cmd 00401 allow tcp from any to me 443 in via $net setup limit src-addr 2
+# $cmd 00400 allow tcp from any to me 80 in via $net setup limit src-addr 2
+# $cmd 00401 allow tcp from any to me 443 in via $net setup limit src-addr 2
 
 # Allow inbound SSH
 
 # Ideally you should declare what ip or groups of ips can access
 
-# instead of setting 'any'
+# instead of setting 'any'. Blocked by default, remove comment to permit.
 
-$cmd 00450 allow tcp from any to me 22 in via $net setup keep-state
+# $cmd 00450 allow tcp from any to me 22 in via $net setup keep-state
 
 # Reject & Log all incoming connections from the outside
 
