--- a/workstation-ipfw.conf
+++ b/workstation-ipfw.conf
@@ -112,7 +112,7 @@ $cmd 00320 deny icmp from any to any in via $net
 
 # Deny ident
 
-$cmd 00330 deny tcp from any to any 113 in via $pif
+$cmd 00330 deny tcp from any to any 113 in via $net
 
 # Deny all Netbios services. 137=name, 138=datagram, 139=session
 
