--- a/workstation-ipfw.conf
+++ b/workstation-ipfw.conf
@@ -164,4 +164,15 @@ $cmd 00999 deny log all from any to any
 
 ################ End of IPFW rules file ###############################
 
+## Consider outbound traffic is allowed only in the 49152–65535 port range.
+## To check the default ephemeral port range in your system issue these commands:
+## sudo sysctl net.inet.ip.portrange.first
+## sudo sysctl net.inet.ip.portrange.last
+## To modify the default ephemeral port range issue the following command:
+## sudo sysctl net.inet.ip.portrange.first=49152
+## sudo sysctl net.inet.ip.portrange.last=65535
+## To make this permanent modify the /etc/sysctl.conf file in your system and add:
+## net.inet.ip.portrange.first=49152
+## net.inet.ip.portrange.last=65535
+
 ## References in the URL: https://www.adminbyaccident.com/freebsd/how-to-freebsd/how-to-configure-the-ipfw-firewall-on-freebsd/
